# connectking

./: .gitignore  .gitmodules  README.md  setup.sh
client/inject/: manifest.json  tampermonkey.user.js
client/launch/: launch_connect4.ps1  launch_connect4.sh
connect4-launch/c4_inject/: inject.js  manifest.json  tampermonkey.user.js
connect4_server/: makefile  server  test.sh
server/: CMakeLists.txt  makefile
server/src/: crow_all.h  main.cpp
